--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=https://api.example.com
-VITE_APP_TITLE="My Vite App"
+VITE_OMDB_API_URL=https://www.omdbapi.com/
+VITE_COINCAP_API_URL=https://api.coincap.io/v2
+VITE_WEBSOCKET_URL=wss://ws.coincap.io/
+VITE_OMDB_API_KEY=3c843d14
