--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-VITE_API_BASE_URL=https://api.example.com
-VITE_APP_TITLE="My Vite App"
+VITE_OMDB_API_URL=
+VITE_COINCAP_API_URL=
+VITE_WEBSOCKET_URL=
+VITE_OMDB_API_KEY=
