Remove Monero and Litecoin from WebSocket URL in Vite configuration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 VITE_OMDB_API_URL=https://www.omdbapi.com/
 VITE_COINCAP_API_URL=https://api.coincap.io/v2
-VITE_WEBSOCKET_URL=wss://ws.coincap.io/prices?assets=bitcoin,ethereum,monero,litecoin
+VITE_WEBSOCKET_URL=wss://ws.coincap.io/prices?assets=bitcoin,ethereum
 VITE_OMDB_API_KEY=3c843d14
