--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.16.5",
     "axios": "^1.6.8",
     "framer-motion": "^11.1.7",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
